Working on map spawning with dummy players and worldedit